--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -15,6 +15,6 @@ jobs:
         uses: actions/cache@v2.1.4
         with:
           # A list of files, directories, and wildcard patterns to cache and restore
-          path: /js/
+          path: js
           # An explicit key for restoring and saving the cache
           key: CA6279E74E77B186A4833DD45B67F
