--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -8,9 +8,10 @@ jobs:
     - name: checkout
       uses: actions/checkout@v1
 
-    - name: deploy docs
+    - name: deploy to target directory
       uses: ./
       with:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         remote_url: https://github.com/appleboy/gh-pages-action.git
+        target_directory: ./
