--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -7,11 +7,11 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v1
-
-    - name: deploy to target directory
-      uses: ./
+      
+    - name: HTML Preview
+      # You may pin to the exact commit or the version.
+      # uses: pavi2410/html-preview-action@9420cd81fbbe0035f59a39536ea5a0443daffa37
+      uses: pavi2410/html-preview-action@v2
       with:
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        remote_url: https://github.com/appleboy/gh-pages-action.git
-        target_directory: ./
+        # The HTML file you want to preview, relative to the root of the repo
+        html_file: ./index.html
